Enhance styling: add overlap line to about page and update navbars to be fixed position so they can be used when scrolled down the page.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,12 @@
   width: clamp(160px, 18vw, 200px); 
 }
 
-
+.overlap-line{
+    position:absolute;
+    width: 65%;
+    border-top: 6px solid #00FFFB;
+    border-radius: 2px;
+}
 
 .language:hover{
     transform: translateY(-5px);
